--- a/style/main.css
+++ b/style/main.css
@@ -177,6 +177,7 @@ a {
 }
 .next {
   font-size: 40px;
+  user-select: none;
 }
 .next:hover {
   cursor: pointer;
@@ -336,6 +337,16 @@ a {
   font-size: 250%;
   margin-top: 15px;
 }
+.menuH{
+  opacity: 0;
+  display: none;
+}
+.bonecoUser{
+  opacity: 0;
+}
+.carrinho{
+  opacity: 0;
+}
 @media screen and (max-width: 740px) {
   .direita-nav {
     display: none;
@@ -360,5 +371,74 @@ a {
   }
   .iconePesquisa{
     display: none;
+  }
+  .itens-menu li{
+    width: 20%;
+  }
+  .itens-menu li a{
+    font-size: 13px;
+  }
+  .next{
+    font-size: 100%;
+    padding-left: 10px;
+  }
+  .nav-animais a{
+    border-radius: 50px;
+  }
+  .img-animal{
+    font-size: 5px;
+  }
+  .box .glass{
+    width: 23%;
+    height: 120px;
+  }
+  .primeira-linha-produtos {
+    margin-top: 50px;
+  }
+  .segunda-linha-produtos {
+    margin-top: 100px;
+  }
+  .produtosPromocao{
+    margin-top: -40px;
+  }
+  .barraResponsiva{
+    width: 35%;
+  }
+  .menuH{
+    opacity: 1;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    transition: 700ms;
+  }
+  .itens-menu{
+    margin-left: -100%;
+    transition: 2500ms;
+    opacity: 0;
+    transform: scale(0.0);
+  }
+  .itens-menu.active{
+    margin-left: 0%;
+    transform: scale(1.0);
+    opacity: 1;
+  }
+  /* .itens-menu.active li {
+    transform: rotate(360deg);
+    transform: scale(1.0);
+  } */
+
+  .menuResponsivo{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+  }
+  .carrinho{
+    font-size: 17px;
+    margin-right: 15px;
+    opacity: 1;
+  }
+  .bonecoUser{
+    margin-right: 5px;
+    opacity: 1;
   }
 }
